# cosmic-initiative

rust/: Cargo.toml  Makefile
rust/cosmic/: Makefile
rust/cosmic/cosmic-cli/: Cargo.toml
rust/cosmic/cosmic-cli/src/: main.rs
rust/cosmic/cosmic-config/: Cargo.toml  Makefile
rust/cosmic/cosmic-config/src/: bind.rs  lib.rs
rust/cosmic/cosmic-hyperlane/: Cargo.toml  Makefile
rust/cosmic/cosmic-hyperlane-tcp/: Cargo.toml  Makefile
rust/cosmic/cosmic-hyperlane-tcp/src/: lib.rs
rust/cosmic/cosmic-hyperlane/src/: lib.rs
rust/cosmic/cosmic-hyperspace/: Cargo.toml  Makefile
rust/cosmic/cosmic-hyperspace/src/: global.rs  lib.rs  machine.rs  reg.rs  star.rs  tests.rs
rust/cosmic/cosmic-macros/: Cargo.toml
rust/cosmic/cosmic-macros-primitive/: Cargo.toml
rust/cosmic/cosmic-macros/src/: lib.rs
rust/cosmic/cosmic-nom/: Cargo.toml
rust/cosmic/cosmic-nom/src/: lib.rs
rust/cosmic/cosmic-registry-postgres/: Cargo.toml
rust/cosmic/cosmic-registry-postgres/src/: lib.rs
rust/cosmic/cosmic-space/: Cargo.toml
rust/cosmic/cosmic-space/e2e/: artifact_file_disk  kind_not_exist  require-sub-and-variant
rust/cosmic/cosmic-space/src/: artifact.rs  command.rs  err.rs  fail.rs  hyper.rs  kind.rs  (+15 more)
rust/mechtron/mechtron/: Cargo.toml
rust/mechtron/mechtron-host/: Cargo.toml
rust/moogon/moogon/: Cargo.toml  Makefile
rust/moogon/moogon/src/: main.rs  server.rs
rust/starlane-parse/src/: lib.rs
rust/starlane-primitive-macros/src/: lib.rs
rust/starlane-space/: Cargo.toml
rust/starlane-space/src/: lib.rs  test.rs
rust/starlane/starlane/: Cargo.toml
(+71 files in other folders)
