[package]
name = "cosmic-config"
version = "0.5.0-alpha1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.69", features=['derive','rc'] }
chumsky = "0.9.2"
ariadne = { version = "0.2.0", features = ["auto-color"] }
semver = "1.0.16"
regex = "1.7.1"